tests/invalidTest/other/for_total_ret_break_if.q
# EXPECT the command in for loop cannot be total return or break

def sint64 errorTest(){
    for sint64 i , i<5, 1{
        if i==3
        then break
        else return i
    }
} 